--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --hmr",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
@@ -11,7 +11,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.0",
+    "@analogjs/vite-plugin-angular": "^1.15.1",
+    "@angular/animations": "^18.2.13",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
@@ -22,8 +23,10 @@
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.6",
     "express": "^4.18.2",
+    "ng-particles": "^3.12.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "tsparticles": "^3.8.1",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
